precision accuracy f1 score calculated

--- a/ModelEvaluation.ipynb
+++ b/ModelEvaluation.ipynb
@@ -202,47 +202,100 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "accuracy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.8049605411499436\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"accuracy: \", accuracy_score(y,y_pred))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "precision"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "precision:  0.7734627831715211\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"precision: \", precision_score(y,y_pred))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "recall"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recall:  0.6988304093567251\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"recall: \", recall_score(y,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "f1  score"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1 score:  0.7342549923195083\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"f1 score: \", f1_score(y,y_pred))"
+   ]
   },
   {
    "cell_type": "code",
